manifests/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
  labels:
  name: ingress-kube-prometheus-stack
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.lan.ccrow.org
    http:
      paths:
      - backend:
          service:
            name: k3s-kube-prometheus-stack-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.lan.ccrow.org
    secretName: grafana-tls
